<resources>
    <string name="app_name">Prayer</string>
    <string name="fajr">Fajr</string>
    <string name="Dhuhr">Dhuhr</string>
    <string name="Asr">Asr</string>
    <string name="Maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="allow">You have to allow us to know your location to can see prayer times</string>
    <string name="get_location">Get My Location</string>
    <string name="prayer_app">Prayer App</string>
</resources>