<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#667CCA"
    tools:context=".ui.pyarer_home.PrayerActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month"
        tools:listitem="@layout/item_calender" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        tools:text="SELECT A DATE"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnRight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/month" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/btnRight"
        app:layout_constraintEnd_toStartOf="@+id/btnRight"
        app:layout_constraintTop_toTopOf="@+id/btnRight" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-22dp"
        android:elevation="30dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_days">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/fajr"
                    android:layout_marginStart="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fajr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/fajr"
                    app:layout_constraintTop_toTopOf="@id/fajr"
                    tools:text="10.00" />

                <TextView
                    android:id="@+id/dhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Dhuhr"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/fajr"
                    app:layout_constraintTop_toBottomOf="@id/fajr" />

                <TextView
                    android:id="@+id/dhuhr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/fajr_time"
                    app:layout_constraintStart_toStartOf="@+id/fajr_time"
                    app:layout_constraintTop_toTopOf="@+id/dhuhr"
                    tools:text="10.00" />
                <TextView
                    android:id="@+id/asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Asr"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/dhuhr"
                    app:layout_constraintTop_toBottomOf="@id/dhuhr" />

                <TextView
                    android:id="@+id/asr_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/fajr_time"
                    app:layout_constraintStart_toStartOf="@+id/fajr_time"
                    app:layout_constraintTop_toTopOf="@+id/asr"
                    tools:text="10.00" />
                <TextView
                    android:id="@+id/maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Maghrib"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/asr"
                    app:layout_constraintTop_toBottomOf="@id/asr" />

                <TextView
                    android:id="@+id/maghrib_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/fajr_time"
                    app:layout_constraintStart_toStartOf="@+id/fajr_time"
                    app:layout_constraintTop_toTopOf="@+id/maghrib"
                    tools:text="10.00" />
                <TextView
                    android:id="@+id/isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/isha"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/maghrib"
                    app:layout_constraintTop_toBottomOf="@id/maghrib" />

                <TextView
                    android:id="@+id/isha_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/fajr_time"
                    app:layout_constraintStart_toStartOf="@+id/fajr_time"
                    app:layout_constraintTop_toTopOf="@+id/isha"
                    tools:text="10.00" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>